fixed LPN's code

--- a/src/app/components/admin-navigation/admin-navigation.component.html
+++ b/src/app/components/admin-navigation/admin-navigation.component.html
@@ -10,8 +10,8 @@
     <div class="menu-button-list">
         <button class="menu-button" routerLink="/admin-dashboard/admin-flight-management" routerLinkActive="active">Quản lý chuyến bay</button>
         <button class="menu-button" routerLink="/admin-dashboard/admin-ticket-management" routerLinkActive="active">Quản lý vé</button>
-        <button class="menu-button">Quản lý khách hàng</button>
-        <button class="menu-button">Thống kê</button>
+        <button class="menu-button" routerLink="/admin-dashboard/guest-management" routerLinkActive="active">Quản lý khách hàng</button>
+        <button class="menu-button" routerLink="/admin-dashboard/statist" routerLinkActive="active">Thống kê</button>
         <button class="menu-button">LOG OUT</button>
     </div>
 </div>
