--- a/src/app/pages/new-account/new-account.component.html
+++ b/src/app/pages/new-account/new-account.component.html
@@ -2,7 +2,7 @@
 <div class="container">
     
     <div class="page-content">
-        <h1>Thêm tài khoản mới</h1>
+        <h1 class="page-title">Thêm tài khoản mới</h1>
         <form class="row g-3">
             <h2>Khách hàng mới</h2>
             <div class="col-md-6">
@@ -40,23 +40,7 @@
                 <button type="submit" class="btn btn-primary">Thêm tài khoản</button>
             </div>
         </form>
-        <nav aria-label="Page navigation example" class="PageNavi">
-            <ul class="pagination">
-                <li class="page-item">
-                    <a class="page-link" href="#">
-                        <span aria-hidden="true">«</span>
-                    </a>
-                </li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item">
-                    <a class="page-link" href="#" aria-label="Next">
-                        <span aria-hidden="true">»</span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
+        
     </div>
 </div>
 
