--- a/src/app/pages/statistical/statistical.component.html
+++ b/src/app/pages/statistical/statistical.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="page-content">
-        <h1>Thống kê</h1>
+        <h1 class="page-title">Thống kê</h1>
         <div class="form">
             <div class="row g-3">
                 <div class="col-lg-6 row2">
@@ -83,22 +83,6 @@
         </div>
 
 
-        <nav aria-label="Page navigation example" class="PageNavi">
-            <ul class="pagination">
-                <li class="page-item">
-                    <a class="page-link" href="#">
-                        <span aria-hidden="true">«</span>
-                    </a>
-                </li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item">
-                    <a class="page-link" href="#" aria-label="Next">
-                        <span aria-hidden="true">»</span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
+        
     </div>
 </div>
