--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,4 +4,15 @@
 //     height: 100%;
 //     overflow: hidden;
 //   }
-  
+* {
+    padding:0;
+    margin:0;
+    box-sizing: border-box;
+}
+html,body{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
