upload fix color text

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,12 +7,12 @@
                 Quý khách có những gì thắc mắc hay muốn tư vấn hổ trợ đặt vé xin hãy liên hệ qua:
             
             <br>
-            <a mat-fab extended routerLink=".">
+            <a mat-fab extended routerLink="." style="color: white  !important;">
                 <mat-icon>phone</mat-icon>
                 1021 4333
               </a>
               <br>
-              <a mat-fab extended  routerLink=".">
+              <a mat-fab extended  routerLink="." style="color: white  !important;">
                 <mat-icon>email</mat-icon>
                 bookingnetflight.com@gmail.com
               </a>
@@ -26,12 +26,12 @@
             <div>
                 Dia chi cac chi nhanh:
             <br>
-            <a mat-fab extended routerLink="." >
+            <a mat-fab extended routerLink="." style="color: white  !important;">
                 <mat-icon style="width: 50px;">home</mat-icon>
                 CN 1: xxx An Dương Vương, phường 4, quận 5, Thành phố Hồ Chí Minh
               </a>
               <br>
-              <a mat-fab extended  routerLink=".">
+              <a mat-fab extended  routerLink="." style="color: white  !important;">
                 <mat-icon style="width: 50px;">home</mat-icon>
                 
                 CN 2: xxx Xã Đàn, phường Nam Đồng, quận Đống Đa, Thành phố Hà Nội
