--- a/src/app/pages/sign-up/sign-up.component.html
+++ b/src/app/pages/sign-up/sign-up.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <mat-horizontal-stepper style="display: flex;align-items: center;justify-content: center;background-color: #fff;color: #146C94;">
     <mat-step label="Đăng kí tài khoản" style="background-color: #146C94;color: black !important;" >
-        <section class="container-fluid div-center" style="height: calc(100vh);margin-top:40px;margin-bottom: 30px;">
+        <section class="container-fluid div-center" style="height: calc(100vh);margin-bottom: 10px;margin-top: -40px;">
             
             <div class="signUp-container" style="margin-top: 20px;">
                 <h1 style="margin-bottom: 20px;">ĐĂNG KÍ</h1>
@@ -42,7 +42,7 @@
         
     </mat-step>
     <mat-step label="Nhập mật khẩu" >
-        <section class="container-fluid div-center" style="height: calc(100vh - 48px);margin-top:20px">
+        <section class="container-fluid div-center" style="height: calc(100vh - 48px);">
             <div class="signUp-container">
                 <h1 style="margin-bottom: 20px;">ĐĂNG KÍ</h1>
 
