upload logout from admin to home

--- a/src/app/components/admin-navigation/admin-navigation.component.html
+++ b/src/app/components/admin-navigation/admin-navigation.component.html
@@ -12,7 +12,7 @@
         <button class="menu-button" routerLink="/admin-dashboard/admin-ticket-management" routerLinkActive="active">Quản lý vé</button>
         <button class="menu-button">Quản lý khách hàng</button>
         <button class="menu-button">Thống kê</button>
-        <button class="menu-button">LOG OUT</button>
+        <button class="menu-button" routerLink="/home">LOG OUT</button>
     </div>
 </div>
 
