--- a/src/app/pages/guest-management/guest-management.component.html
+++ b/src/app/pages/guest-management/guest-management.component.html
@@ -35,7 +35,7 @@
 </div>
 <div class="guest-data-table">
   <div class="table-container">
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table" style="background-color: white;">
       <ng-container matColumnDef="id_guest" class="guest-table">
           <th mat-header-cell *matHeaderCellDef> Mã khách hàng </th>
           <td mat-cell *matCellDef="let element"> {{element.id_guest}} </td>
