phuongdai-pre-merge

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<!-- <app-admin-flight-management></app-admin-flight-management> -->
-
-<router-outlet></router-outlet>
-<!-- <app-admin-navigation></app-admin-navigation> -->
+<app-booking-history></app-booking-history>
