upload router-link navbar home

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -41,9 +41,9 @@
             Tài khoản
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item " routerLink=".">Xem thông tin</a></li>
-            <li><a class="dropdown-item" routerLink=".">Đổi mật khẩu</a></li>
-            <li><a class="dropdown-item" routerLink=".">Đăng xuất</a></li>
+            <li><a class="dropdown-item " routerLink="/view-profile">Xem thông tin</a></li>
+            <li><a class="dropdown-item" routerLink="/change-pass">Đổi mật khẩu</a></li>
+            <li><a class="dropdown-item" routerLink="/booking-history">Đăng xuất</a></li>
           </ul>
         </li>
         
