--- a/src/app/pages/new-account/new-account.component.scss
+++ b/src/app/pages/new-account/new-account.component.scss
@@ -29,7 +29,11 @@
 form{
     border: 3px solid #19A7CE;
     border-radius: 10px;
-    padding:30px
+    padding:30px;
+    
+}
+.form-label{
+    margin-bottom: 5px;
 }
 button{
     background-color: #19A7CE;
@@ -85,15 +89,27 @@ input, select{
 #labelPassword{
     display: flex;
     justify-content: space-between;
+    
 }
 #show{
-    background-image: url(../../../assets/Icon/icons8-eye-48.png);
-    background-repeat: no-repeat;
-    background-position: 0%;
-    background-size: 20px;
     justify-content: right;
-    padding-left: 25px;
-    margin-right: 12%;
+    padding-left: 30px;
+    margin-right: 10px;
 }
-
+// #password-container:focus,#username-container:focus{
+//     outline: none;
+//     border: 3px solid #19A7CE;
+// }
+.eye-icon{
+    position: relative;
+    justify-content: right;
+    cursor: pointer;
+    border: none;
+    background-color: transparent !important;
+    margin-right: 10%;
+    
+}
+#eye-icon{
+    position: absolute;
+}
 // ---------------------------------------------------------------------------------
