--- a/src/app/pages/booking-history/booking-history.component.html
+++ b/src/app/pages/booking-history/booking-history.component.html
@@ -38,14 +38,14 @@
                 <!-- Thong tin ve -->
                 <div class="row margin-center justify-content-center" >
                     <!-- Tóm tắt vé -->
-                    <div class="col-2 text-center cover mb-5 " >
+                    <div class="col-2 text-center cover mb-3 " >
                         <p class="demuc lighter">MÃ VÉ</p>
                         <p class="detail harder">1111</p>
                         <p class="demuc lighter">NGÀY ĐẶT</p>
                         <p class="detail harder">NGÀY 8 THÁNG 10 NĂM 2023</p>
                     </div>
                     <!-- Chi tiết vé -->
-                    <div class="col-9 cover margin-left mb-5 mx-3">
+                    <div class="col-9 cover margin-left mb-3 mx-3">
                         <div class="container">
                             <div class="row">
                                 <div class="col-8">
@@ -95,14 +95,14 @@
                         </div>
                     </div>
                     <!-- Tóm tắt vé -->
-                    <div class="col-2 text-center cover mb-5 " >
+                    <div class="col-2 text-center cover mb-3 " >
                         <p class="demuc lighter">MÃ VÉ</p>
                         <p class="detail harder">1111</p>
                         <p class="demuc lighter">NGÀY ĐẶT</p>
                         <p class="detail harder">NGÀY 8 THÁNG 10 NĂM 2023</p>
                     </div>
                     <!-- Chi tiết vé -->
-                    <div class="col-9 cover margin-left mb-5 mx-3">
+                    <div class="col-9 cover margin-left mb-3 mx-3">
                         <div class="container">
                             <div class="row">
                                 <div class="col-8">
@@ -152,14 +152,14 @@
                         </div>
                     </div>
                     <!-- Tóm tắt vé -->
-                    <div class="col-2 text-center cover mb-5" >
+                    <div class="col-2 text-center cover mb-3" >
                         <p class="demuc lighter">MÃ VÉ</p>
                         <p class="detail harder">1111</p>
                         <p class="demuc lighter">NGÀY ĐẶT</p>
                         <p class="detail harder">NGÀY 8 THÁNG 10 NĂM 2023</p>
                     </div>
                     <!-- Chi tiết vé -->
-                    <div class="col-9 cover margin-left mb-5 mx-3">
+                    <div class="col-9 cover margin-left mb-3 mx-3">
                         <div class="container">
                             <div class="row">
                                 <div class="col-8">
@@ -209,36 +209,28 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-3"></div>
-                    <div class="col-6">
-                        <div class="container ">
-                            <div class="row justify-content-center mb-3">
-                                <div class="col-2  ">
-                                    <button type="button" class="btn btn-outline-primary"><mat-icon fontIcon="arrow_back_ios"></mat-icon></button>
-                                </div>
-                                <div class="col-2">
-                                    <button type="button" class="btn btn-outline-primary">__</button>
-                                </div>
-                                <div class="col-2">
-                                    <button type="button" class="btn btn-outline-primary">__</button>
-                                </div>
-                                <div class="col-2">
-                                    <button type="button" class="btn btn-outline-primary">__</button>
-                                </div>
-                                <div class="col-2 ">
-                                    <button type="button" class="btn btn-outline-primary">__</button>
-                                </div>
-                                <div class="col-2">
-                                    <button type="button" class="btn btn-outline-primary"><mat-icon fontIcon="arrow_forward_ios"></mat-icon></button>
-                                </div>
-                              
-                        </div>
-                    </div>
-                    <div class="col-3"></div>
-                </div>
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination justify-content-center mt-4">
+                        <li></li>
+                        <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Previous">
+                          <span aria-hidden="true">&laquo;</span>
+                        </a>
+                      </li>
+                      <li class="page-item"><a class="page-link" href="#">1</a></li>
+                      <li class="page-item"><a class="page-link" href="#">2</a></li>
+                      <li class="page-item"><a class="page-link abc" href="#">3</a></li>
+                      <li class="page-item"><a class="page-link" href="#">4</a></li>
+                      <li class="page-item"><a class="page-link" href="#">5</a></li>
+                      <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Next">
+                          <span aria-hidden="true">&raquo;</span>
+                        </a>
+                      </li>
+                      <li></li>
+                    </ul>
+                  </nav>
             </div>
-        </div>
         </div>
     </body>
 </html>
