--- a/src/app/pages/change-pass/change-pass.component.scss
+++ b/src/app/pages/change-pass/change-pass.component.scss
@@ -5,27 +5,122 @@ body {
   }
 
 input{
-  border: 4px solid #DBF1F8;
-  border-radius: 25px;
+  width: 100%;
+      border: 2px solid #146C94;
+      height: 54px;
+      padding: 0 15px;
+      border-radius: 15px;
+      font-size:14px;
 }
 
-h1 {
-    text-align: center;
-}
-  
 form {
     margin-top: 10%;
     padding: 10px;
-    border: 4px solid #DBF1F8;
-    border-radius: 35px;
+    border: 4px solid #19A7CE;
+    border-radius: 25px;
 }
 
-button{
-  margin-top: 40%;
+
+
+
+:root {
+  --blue-1-color: #146C94;
+  --blue-2-color: #19A7CE;
+  --blue-3-color: #AFD3E2;
+  --white-color: #fff;
+  --gray-color: #D9D9D9;
+}
+* {
+  box-sizing: border-box;
+}
+.div-center{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.div-spacebetween{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+h1{
+  color:#146C94;
+  font-weight: 500;
+  font-size: 30px;
+}
+
+.form-group{
+  position: relative;
   width: 100%;
-  border-radius: 35px;
+  input{
+      width: 100%;
+      border: 2px solid #146C94;
+      height: 54px;
+      padding: 0 15px;
+      border-radius: 15px;
+      font-size:14px;
+  }
+}
+#password-container:focus,#username-container:focus{
+  outline: none;
+  border: 3px solid #19A7CE;
 }
 
-legend {
-    margin-bottom: 10%;
+.eye-icon{
+  position: absolute;
+  right:15px;
+  top:60px;
+  cursor: pointer;
+  border: none;
+  background-color: transparent !important;
+}
+
+label{
+  font-size: 16px;
+  color: #146C94;
+  font-weight: bold;
+  margin-top: 20px;
+  margin-bottom: 5px;
+  
+}
+
+.button-submit{
+  width: 160px;
+  height: 50px;
+  background-color:#19A7CE;
+  border-radius: 10px;
+  border: none;
+  margin-top: 10%;
+  font-size: 18px;
+  font-weight: bold;
+  color:white;
+  position: relative;
+}
+.btn-next,.btn-previous{
+  width: 120px;
+  height: 50px;
+  background-color:#19A7CE;
+  border-radius: 10px;
+  border: none;
+  margin-top: 10px;
+  font-size: 18px;
+  font-weight: 500;
+  color:white !important;
+
+}
+.btn-previous{
+  background-color:#AFD3E2;
+  color:black !important
+}
+.button-submit:hover,.btn-next:hover{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+#inlineRadio1,#inlineRadio2{
+  width: 30px;
+  margin-left: -10px;
+  margin-top:20px;
+  height: 20px;
+}
+.form-check-label{
+  margin-left: 10px;
 }
