--- a/src/app/pages/view-profile/view-profile.component.html
+++ b/src/app/pages/view-profile/view-profile.component.html
@@ -14,7 +14,7 @@
       <div class="col-2"></div>
       <div class="col-md-8">
         <form class="row g-3">
-            <legend>THÔNG TIN NGƯỜI DÙNG</legend>
+          <h1 style="margin-bottom: 20px;">THÔNG TIN TÀI KHOẢN</h1>
           <div class="container">
             <div class="row">
             <!-- Col ben trai -->
@@ -28,31 +28,25 @@
                 <!-- Input Gmaiil -->
                 <label for="inputEmail3" class="form-label">Gmail</label>
                 <input type="text" class="form-control" id="inputEmail3" placeholder="abc@gmail.com">
-                <!-- Input so dien thoai -->
-                <label for="inputTel" class="form-label">Số điện thoại</label>
-                <input type="tel" class="form-control" id="inputTel">
+                
               </div>
             <!-- Col ben phai -->
               <div class="col-md-6">
                 <!-- Input Gioi Tinh -->
                 <label for="inputGender" class="form-label">Giới tính</label>
-                <input type="text" class="form-control" id="inputGender" placeholder="Nam">
-                <!-- Input Mat khau cu -->
-                <label for="inputPassword4" class="form-label">Nhập mật khẩu cũ</label>
-                <input type="password" class="form-control" id="inputPassword4" >
-                <!-- Input Matkhau moi -->
-                <label for="inputPassword4" class="form-label">Nhập mật khẩu mới</label>
-                <input type="password" class="form-control" id="inputPassword4" >
-                <!-- Input nhap lai matkhau moi -->
-                <label for="inputPassword4" class="form-label">Nhập lại mật khẩu mới</label>
-                <input type="password" class="form-control" id="inputPassword4" >
-                <div>
-                  <div class="row">
-                    <div class="col-md-6"></div>
-                    <div class="col-md-6 button">
-                    <button class="btn btn-primary" >LƯU</button>
+                <input type="text" class="" id="inputGender" placeholder="Nam">
+                <!-- Input so dien thoai -->
+                <label for="inputTel" class="form-label">Số điện thoại</label>
+                <input type="tel" class="" id="inputTel">
+                
+              </div>
+              <div>
+                <div class="row">
+                <div class="col-md-8"></div>
+                <div class="col-md-4 button">
+                  <button class="button-submit">LƯU</button>
                 </div>
-                  </div>
+               
                   
                 </div>
               </div>
