--- a/src/app/pages/view-profile/view-profile.component.scss
+++ b/src/app/pages/view-profile/view-profile.component.scss
@@ -5,25 +5,27 @@ body {
   }
 
 input{
-  border: 4px solid #DBF1F8;
-  border-radius: 25px;
+  width: 100%;
+      border: 2px solid #146C94;
+      height: 54px;
+      padding: 0 15px;
+      border-radius: 15px;
+      font-size:14px;
 }
 
-  h1 {
-    text-align: center;
-  }
+h1 {
+  color: #146C94;
+  font-weight: bold;
+  font-size: 30px;
+}
   
 form {
     margin-top: 10%;
     padding: 10px;
-    border: 4px solid #DBF1F8;
-    border-radius: 35px;
+    border: 4px solid #19A7CE;
+    border-radius: 25px;
 }
 
-.flex-right{
-  display: flex;
-  justify-content: flex-end;
-}
 
 mat-icon{
   color: #146C94;
@@ -32,8 +34,38 @@ mat-icon{
 .button{
   display: flex;
   justify-content: flex-end;
+  
 }
 
 button{
+  border: #146C94;
   margin-top: 10%;
+  border-radius: 35px;
+  font-size: 18px;
+  font-weight: 500;
+  color: white !important;
+  width: 200px;
+  background-color: #146C94;
+}
+
+label{
+  font-size: 16px;
+  color: #146C94;
+  font-weight: bold;
+  margin-top: 20px;
+  margin-bottom: 5px;
+  
+}
+
+.button-submit{
+  width: 160px;
+  height: 50px;
+  background-color:#19A7CE;
+  border-radius: 10px;
+  border: none;
+  margin-top: 10%;
+  font-size: 18px;
+  font-weight: bold;
+  color:white;
+  position: relative;
 }
