--- a/src/app/pages/booking-history/booking-history.component.html
+++ b/src/app/pages/booking-history/booking-history.component.html
@@ -53,7 +53,7 @@
                                         <div class="col-12 lighter">NOI DI - NOI DEN</div>
                                     </div>
                                     <div class="row">
-                                        <div class="col-12 harder">VIETNAM - THAILAND</div>
+                                        <div class="col-12 harder bigger">VIETNAM - THAILAND</div>
                                     </div>
                                     <div class="row ">
                                         <div class="col-md-6 lighter">
@@ -110,7 +110,7 @@
                                         <div class="col-12 lighter">NOI DI - NOI DEN</div>
                                     </div>
                                     <div class="row">
-                                        <div class="col-12 harder">VIETNAM - THAILAND</div>
+                                        <div class="col-12 harder bigger" >VIETNAM - THAILAND</div>
                                     </div>
                                     <div class="row ">
                                         <div class="col-md-6 lighter">
@@ -167,7 +167,7 @@
                                         <div class="col-12 lighter">NOI DI - NOI DEN</div>
                                     </div>
                                     <div class="row">
-                                        <div class="col-12 harder">VIETNAM - THAILAND</div>
+                                        <div class="col-12 harder bigger">VIETNAM - THAILAND</div>
                                     </div>
                                     <div class="row ">
                                         <div class="col-md-6 lighter">
