--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 
-  <footer class="container-fuild" style="background-color: #146c94;">
+  <footer class="container-fuild" style="background-color: #146c94;overflow: hidden;">
     <div class="row" style="width: 100vw;">
         <div class="col-12 col-xl-4" style="height: 350px;position: relative;padding: 36px;">
             
