--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -15,11 +15,11 @@
             Trang chủ</a>
         </li>
         <li class="nav-item" style="color: white !important">
-          <a class="nav-link text-color"  routerLink=".">
+          <a class="nav-link text-color"  routerLink="/booking-history">
             Lịch sử vé</a>
         </li>
         <li class="nav-item" style="color: white">
-          <a class="nav-link text-color"  routerLink=".">
+          <a class="nav-link text-color"  routerLink="/booking-ticket">
             Chuyến bay</a>
         </li>
         <li class="nav-item" style="color: white !important">
@@ -41,9 +41,9 @@
             Tài khoản
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item " routerLink=".">Xem thông tin</a></li>
-            <li><a class="dropdown-item" routerLink=".">Đổi mật khẩu</a></li>
-            <li><a class="dropdown-item" routerLink=".">Đăng xuất</a></li>
+            <li><a class="dropdown-item " routerLink="/view-profile">Xem thông tin</a></li>
+            <li><a class="dropdown-item" routerLink="/change-pass">Đổi mật khẩu</a></li>
+            <li><a class="dropdown-item" routerLink="/login">Đăng xuất</a></li>
           </ul>
         </li>
         
