--- a/src/app/pages/booking-ticket-detail/booking-ticket-detail.component.html
+++ b/src/app/pages/booking-ticket-detail/booking-ticket-detail.component.html
@@ -1,63 +1,67 @@
-<app-header></app-header>
-<app-navbar></app-navbar>
-<div class="container my-5">
-    <h1 class="text-center color-2 fw-bold">ĐẶT VÉ</h1>
-    <div class="ticket-info border-color-1">
-        <div class="row">
-            <h1 class="color-2 ms-3 fw-bold">THÔNG TIN ĐẶT VÉ</h1>
-            <div class="ticket-info-detail col-12 ">
-                <div class="row border-color-2 p-3">
-                    <div class="col-7">
-                        <h3 class="color-1 fw-bold">NƠI ĐI - NƠI ĐẾN</h3>
-                        <H2 class="color-2 fw-bold">VIETNAM - THAILAND</H2>
-                        <h3 class="color-1 fw-bold">NGÀY/GIỜ: <span class="color-2">28 tháng 9 năm 2023</span></h3>
-                    </div>
-                    <div class="col-5">
-                        <h3 class="color-1 fw-bold">MÁY BAY: <span class="color-2">VNAIRLINE</span></h3>
-                        <h3 class="color-1 fw-bold">MÃ CHUYẾN: <span class="color-2">ALVN01</span></h3>
-                        <h3 class="color-1 fw-bold">GIÁ VÉ: <span class="color-2">2.000.000</span></h3>
+
+
+    <app-header></app-header>
+    <app-navbar></app-navbar>
+    <div class="container my-5" >
+        <h1 class="text-center color-2 fw-bold">ĐẶT VÉ</h1>
+        <div class="ticket-info border-color-1" style="border-radius: 15px;">
+            <div class="row">
+                <h1 class="color-2 ms-3 fw-bold">THÔNG TIN ĐẶT VÉ</h1>
+                <div class="ticket-info-detail col-12 border-ra" style="border-radius: 20px;display: flex;justify-content: center;align-items: center;">
+                    <div class="row border-color-2 p-3 border-ra" style="border-radius: 20px;width: 1000px;">
+                        <div class="col-7">
+                            <h3 class="color-1 fw-bold font-20">NƠI ĐI - NƠI ĐẾN</h3>
+                            <h1 class="color-2 fw-bold font-28">VIETNAM - THAILAND</h1>
+                            <h3 class="color-1 fw-bold font-20">NGÀY/GIỜ: <span class="color-2">28 tháng 9 năm 2023</span></h3>
+                        </div>
+                        <div class="col-5">
+                            <h3 class="color-1 fw-bold font-20">MÁY BAY: <span class="color-2">VNAIRLINE</span></h3>
+                            <h3 class="color-1 fw-bold font-20">MÃ CHUYẾN: <span class="color-2">ALVN01</span></h3>
+                            <h3 class="color-1 fw-bold font-20">GIÁ VÉ: <span class="color-2">2.000.000</span></h3>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-12">
-                <div class="row">
-                    <div class="col-6">
-                        <label for="inputName" class="form-label fs-4 color-2 fw-bold mt-4">Họ và tên</label>
-                        <input type="text" id="inputName"  class="form-control form-control-input">
-                        <label for="inputEmail" class="form-label fs-4 color-2 fw-bold mt-4">Gmail</label>
-                        <input type="text" id="inputEmail" class="form-control form-control-input">
-                        <label for="inputPhone" class="form-label fs-4 color-2 fw-bold mt-4">Số điện thoại</label>
-                        <input type="text" id="inputPhone" class="form-control form-control-input">
-                        
-                        <p class="fs-4 color-2 fw-bold mt-4">Loại ghế</p>
-                        <div class="chair-check">
-                            <div class="row">
-                                <div class="col-6 h-50px">
-                                    <input type="radio" class="btn-check" name="options-outlined" id="success-outlined" autocomplete="off" checked>
-                                    <label class="btn btn-outline-success w-100 h-100 form-control-input d-flex justify-content-center align-items-center" for="success-outlined">BSN</label>
-                                </div>
-                                <div class="col-6 h-50px">
-                                    <input type="radio" class="btn-check" name="options-outlined" id="danger-outlined" autocomplete="off">
-                                    <label class="btn btn-outline-danger w-100 h-100 form-control-input d-flex justify-content-center align-items-center" for="danger-outlined">ECO</label>
+                <div class="col-12">
+                    <div class="row">
+                        <div class="col-6">
+                            <label for="inputName" class="form-label fs-4 color-2 fw-bold mt-4 font-18">Họ và tên</label>
+                            <input type="text" id="inputName"  class="form-control form-control-input bor-ra">
+                            <label for="inputEmail" class="form-label fs-4 color-2 fw-bold mt-4 font-18">Gmail</label>
+                            <input type="text" id="inputEmail" class="form-control form-control-input bor-ra">
+                            <label for="inputPhone" class="form-label fs-4 color-2 fw-bold mt-4 font-18">Số điện thoại</label>
+                            <input type="text" id="inputPhone" class="form-control form-control-input bor-ra">
+                            
+                            <p class="fs-4 color-2 fw-bold mt-4 font-18">Loại ghế</p>
+                            <div class="chair-check">
+                                <div class="row">
+                                    <div class="col-6 h-50px">
+                                        <input type="radio" class="btn-check" name="options-outlined" id="success-outlined" autocomplete="off" checked>
+                                        <label class="btn btn-outline-success w-100 h-100 form-control-input d-flex justify-content-center align-items-center" for="success-outlined">BSN</label>
+                                    </div>
+                                    <div class="col-6 h-50px">
+                                        <input type="radio" class="btn-check" name="options-outlined" id="danger-outlined" autocomplete="off">
+                                        <label class="btn btn-outline-danger w-100 h-100 form-control-input d-flex justify-content-center align-items-center" for="danger-outlined">ECO</label>
+                                    </div>
                                 </div>
                             </div>
+                            <p class="mt-4 color-2 text-justify fs-5 text-second">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis ratione pariatur, amet doloribus veritatis, illo deserunt mollitia saepe ea sed eligendi nisi inventore minus quos? Officiis ex autem quia facilis?</p>
                         </div>
-                        <p class="mt-4 color-2 text-justify fs-5 text-second">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis ratione pariatur, amet doloribus veritatis, illo deserunt mollitia saepe ea sed eligendi nisi inventore minus quos? Officiis ex autem quia facilis?</p>
-                    </div>
-                    <div class="col-6">
-                        <label for="inputQuantily" class="form-label fs-4 color-2 fw-bold mt-4">Số lượng đặt</label>
-                        <input type="text" id="inputQuantily" class="form-control form-control-input">
-                        <label for="inputSum" class="form-label fs-4 color-2 fw-bold mt-4">Tổng giá</label>
-                        <input type="text" id="inputSum" class="form-control form-control-input">
-                        <label for="inputDate" class="form-label fs-4 color-2 fw-bold mt-4">Ngày đặt</label>
-                        <input type="date" id="inputDate" required class="form-control form-control-input">
-                        <div class="ticket-btn mt-6 d-flex justify-content-end h-50px">
-                            <input type="submit" (click)="showOnInit()" class="btn btn-primary px-5 py-2 background-color-1 fw-bold border-color-1" value="Đặt vé">
+                        <div class="col-6">
+                            <label for="inputQuantily" class="form-label fs-4 color-2 fw-bold mt-4 font-18">Số lượng đặt</label>
+                            <input type="text" id="inputQuantily" class="form-control form-control-input bor-ra">
+                            <label for="inputSum" class="form-label fs-4 color-2 fw-bold mt-4 font-18">Tổng giá</label>
+                            <input type="text" id="inputSum" class="form-control form-control-input bor-ra">
+                            <label for="inputDate" class="form-label fs-4 color-2 fw-bold mt-4 font-18">Ngày đặt</label>
+                            <input type="date" id="inputDate" required class="form-control form-control-input bor-ra">
+                            <div class="ticket-btn mt-6 d-flex justify-content-end h-50px">
+                                <input type="submit" (click)="showOnInit()" class="btn btn-primary px-5 py-2 background-color-1 fw-bold border-color-1" value="Đặt vé">
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<app-footer></app-footer>
+    <app-footer></app-footer>
+
+
