--- a/src/app/pages/booking-ticket-detail/booking-ticket-detail.component.scss
+++ b/src/app/pages/booking-ticket-detail/booking-ticket-detail.component.scss
@@ -5,7 +5,16 @@
 .color-2 {
     color: #146C94;
 }
-
+.border-ra{
+    border-radius: 15px;
+}
+.body{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
 .background-color-1 {
     background-color: #19A7CE;
 }
@@ -31,10 +40,27 @@
     border: #146C94 solid 3px;
     border-radius: 5px;
 }
-
-
+.font-18{
+    font-size: 18px !important;
+}
+.font-20{
+    font-size: 20px !important;
+}
+.font-22{
+    font-size: 22px !important;
+}
+.font-24{
+    font-size: 24px !important;
+}
+.font-28{
+    font-size: 28px !important;
+}
+.bor-ra{
+    border: 3px solid #146C94 !important;
+    border-radius: 10px !important;
+}
 .ticket-info {
-    padding: 30px 100px;
+    padding: 40px 100px;
 }
 
 .form-control-input {
