--- a/src/app/pages/booking-ticket/booking-ticket.component.scss
+++ b/src/app/pages/booking-ticket/booking-ticket.component.scss
@@ -2,17 +2,15 @@
     box-sizing: border-box;
 }
 
-.test-1 {
-    height: 100hv;
-    border: #146C94 solid 3px;
-    border-radius: 5px;
+.body{
+    width: 100%;
+    height: 100vh;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
 }
 
-.test-2 {
-    height: 100hv;
-    margin-left: 40px;
 
-}
 
 .border-color-1 {
     border: #146C94 solid 3px;
@@ -128,7 +126,7 @@
 
 .ticket p {
     font-weight: bold;
-    /* font-size: 20px; */
+    font-size: 20px;
 }
 
 
