add routerLink to guest-management after taking action

--- a/src/app/pages/new-account/new-account.component.html
+++ b/src/app/pages/new-account/new-account.component.html
@@ -42,8 +42,10 @@
                 </select>
             </div>
             <div class="buttons">
-                <button type="submit" class="btn btn-primary" id="quay-lai">Quay lại</button>
-                <button type="submit" class="btn btn-primary">Thêm tài khoản</button>
+                <button type="submit" class="btn btn-primary" id="quay-lai" [routerLink]="['/admin-dashboard', 'guest-management']">Quay lại</button>
+                <button type="submit" class="btn btn-primary"
+                [routerLink]="['/admin-dashboard', 'guest-management']">
+                Thêm tài khoản</button>
             </div>
         </form>
         
