--- a/src/app/pages/guest-management/guest-management.component.html
+++ b/src/app/pages/guest-management/guest-management.component.html
@@ -26,7 +26,7 @@
       </select>
     </div>
     <div class="col-lg-5 col-md-6">
-      <input type="text" class="form-control" id="search">
+      <input type="text" class="form-control" id="search" style="padding-left: 15px">
     </div>
     <div class="col-lg-2 col-md-3" id="btnTimKiem">
       <button type="button" class="btn btn-primary">Tìm kiếm</button>
